generated/checkers/gen/AllGen-UAF-aec8e6bf839101784f3ef037dcdb9432c3f32343/build_logs/syntax-repair-03/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::reportDoubleRelease(const clang::ento::CallEvent&, clang::ento::CheckerContext&, const clang::ento::MemRegion*) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:288:57: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  288 |   if (const Stmt *Origin = State->get<ReleasedOriginMap>(R)) {
      |                            ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
      |                                                         |
      |                                                         clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:341:56: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::Stmt*> >::lookup_type’ {aka ‘const clang::Stmt* const*’} to ‘const clang::Stmt*’ in initialization
  341 |     const Stmt *Origin = State->get<ContainerOriginMap>(VD);
      |                          ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~
      |                                                        |
      |                                                        clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::VarDecl*, const clang::Stmt*> >::lookup_type {aka const clang::Stmt* const*}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
